[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-prompt-builder"
version = "0.1.4"
description = "Type-safe prompt template builder for LLM APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-prompt-builder#readme"
Repository = "https://github.com/philiprehberger/py-prompt-builder"
Issues = "https://github.com/philiprehberger/py-prompt-builder/issues"
Changelog = "https://github.com/philiprehberger/py-prompt-builder/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_prompt_builder"]
