[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-prompt-builder"
version = "0.1.6"
description = "Type-safe prompt template builder for LLM APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["prompt", "llm", "template", "ai", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-prompt-builder#readme"
Repository = "https://github.com/philiprehberger/py-prompt-builder"
Issues = "https://github.com/philiprehberger/py-prompt-builder/issues"
Changelog = "https://github.com/philiprehberger/py-prompt-builder/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_prompt_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
